# GetAlleles

./: README.md  get_alleles.py  pyproject.toml  requirements.txt
getalleles/: __main__.py  alignment.py  assembly.py  log.py  utils.py  version.py
